added offshell tops

--- a/FBR_Bericht_2025.tex
+++ b/FBR_Bericht_2025.tex
@@ -149,13 +149,13 @@ our \minnlo{} generator we hope to significantly improve the estimation of the
 prompt atmospheric neutrino background in ICECUBE in terms of both accuracy and
 precision.
 
-\begin{figure}[h]
-\begin{center}
-\includegraphics[width=0.95\linewidth]{plots/cc_neutrino_flux}
-\caption{Invariant-mass distribution of leading $b$-jets for \minnlo{} (blue), \minlo{} (grey).}
-\label{fig:neutrinoflux}
-\end{center}
-\end{figure}
+%\begin{figure}[h]
+%\begin{center}
+%\includegraphics[width=0.95\linewidth]{plots/cc_neutrino_flux}
+%\caption{Invariant-mass distribution of leading $b$-jets for \minnlo{} (blue), \minlo{} (grey).}
+%\label{fig:neutrinoflux}
+%\end{center}
+%\end{figure}
 
 %
 \subsubsection[\minnlo{} method for heavy-quark plus colour-singlet production and application to $b\bar{b}Z$ process]{\minnlo{} method for heavy-quark plus colour-singlet production and the \boldmath{$b\bar{b}Z$} process}
@@ -181,7 +181,8 @@ Higgs production associated with bottom quarks (\bbH{}) is a rare production mod
 \begin{Namen}
 C. Biello, C. Signorile-Signorile, M. Wiesemann, G. Zanderighi
 \end{Namen}
-%
+Given the experimental possibilities provided by the LHC to study the properties of the top quark through decay products, theoretical efforts are required to accurately describe off-shell effects in top-quark pair production. The current advancement of the \minnlo{} method enables the precise simulation of this process, including decay effects in the fully leptonic channel ($pp\rightarrow e^-\bar{\nu}_e\mu^+\nu_\mu$). With six particles in the final state at leading order, this represents the highest multiplicity configuration we are currently investigating at NNLO+PS. Its complexity poses both computational and conceptual challenges: we address the high computational cost by improving the numerical efficiency of the code, while the absence of an exact two-loop amplitude requires the development of reliable approximations.
+% 
 \subsubsection[\minnlo{} method for jet processes using $N$-jettiness]{\minnlo{} method for jet processes using \boldmath{$N$}-jettiness}
 \begin{Namen}
 M. Ebert, M. Wiesemann, G. Zanderighi, S. Zanoli
