--- a/FBR_Bericht_2025.tex
+++ b/FBR_Bericht_2025.tex
@@ -202,6 +202,15 @@ plus jet production, by deriving the \minnlo{} formalism for $1$-jettiness.
 \begin{Namen}
 G. Pelliccioli, M. Wiesemann, G. Zanderighi, S. Zanoli
 \end{Namen}
+
+\begin{figure}[b!]
+\begin{center}
+\includegraphics[width=0.95\linewidth]{plots/MiNNLO_EW_WZ_mZ.pdf}
+\caption{Dilepton mass in $WZ$ process.}
+\label{fig:WZ}
+\end{center}
+\end{figure}
+
 Although, by and large, 
 QCD perturbation theory provides the dominant corrections at hadron 
 colliders due to the size of the strong coupling at the relevant energies, 
@@ -219,6 +228,9 @@ for $WZ$ production. We then studied, different approaches to combine the
 QCD NNLO+PS predictions with the EW NLO+PS predictions using additive 
 and multiplicative matching schemes as well as different treatments of the 
 QCD and QED radiation in the parton showers.
+As an example, \fig{fig:WZ} shows the crucial importance of photon radiation
+to describe the Z-boson line shape (cf. difference with 
+red dash-dotted line in first ratio inset, which is the pure QCD prediction).
 
 Currently, we are working on a more sophisticated inclusion of EW effects 
 by accounting for NLO EW corrections for $WZ+jet$ production
@@ -242,25 +254,35 @@ G. Pelliccioli, G. Zanderighi
 \begin{refsection}
 Section for predictions at hadron-hadron colliders at fixed order.
 %
+{\color{red} ==================\\ ====\; TO BE DONE\; ====\\ ==================}
+%
 \subsubsection{Top-mass renormalization in ttbar @ NNLO}
 \begin{Namen}
 J. Mazzitelli
 \end{Namen}
+%
+{\color{red} ==================\\ ====\; TO BE DONE\; ====\\ ==================}
 %
 \subsubsection{Wbb @ NNLO}
 \begin{Namen}
 J. Mazzitelli
 \end{Namen}
 %
+{\color{red} ==================\\ ====\; TO BE DONE\; ====\\ ==================}
+%
 \subsubsection{Z+c-jet NNLO QCD}
 \begin{Namen}
 R. Gauld
 \end{Namen}
 %
+{\color{red} ==================\\ ====\; TO BE DONE\; ====\\ ==================}
+%
 \subsubsection{Off-shell NLO predictions in tt(+X) processes}
 \begin{Namen}
 G. Pelliccioli
 \end{Namen}
+%
+{\color{red} ==================\\ ====\; TO BE DONE\; ====\\ ==================}
 %
 \printbibliography[heading=subbibliography]
 \end{refsection}
@@ -272,25 +294,60 @@ G. Pelliccioli
 \begin{refsection}
 Space for a nice introduction.
 %
+{\color{red} ==================\\ ====\; TO BE DONE\; ====\\ ==================}
+%
 \subsubsection{VBF $H\rightarrow b\bar{b}$ production}
 \begin{Namen}
 A. Behring, G. Zanderighi
 \end{Namen}
+%
+{\color{red} ==================\\ ====\; TO BE DONE\; ====\\ ==================}
 %
 \subsubsection{Two-loop amplitudes for Higgs plus jet}
 \begin{Namen}
 U. Haisch, M. Niggetiedt
 \end{Namen}
 %
-\subsubsection{Top-mass dependence in Higgs production at NNLO+PS}
-\begin{Namen}
-M. Niggetiedt, M. Wiesemann
-\end{Namen}
+{\color{red} ==================\\ ====\; TO BE DONE\; ====\\ ==================}
 %
-\subsubsection{Light-quark mass effects in Higgs production at NNLO}
+\subsubsection{Quark-mass effects in Higgs production at NNLO}
 \begin{Namen}
 M. Niggetiedt
 \end{Namen}
+%
+{\color{red} ==================\\ ====\; TO BE DONE\; ====\\ ==================}
+%
+\subsubsection{Full top-mass dependence in Higgs production at NNLO+PS}
+\begin{Namen}
+M. Niggetiedt, M. Wiesemann
+\end{Namen}
+
+\begin{figure}[h!]
+\begin{center}
+\includegraphics[width=0.95\linewidth]{plots/ptH_diphotons_mass_effect.pdf}
+\caption{Top-mass effect in Higgs $p_T$ spectrum.}
+\label{fig:topmass_Higgs_pT}
+\end{center}
+\end{figure}
+%
+Based on the calculation of the inclusive NNLO cross section in the full theory
+including the complete top-mass effects,
+we have developed the first (and so far only) 
+NNLO+PS generator for the loop-induced 
+Higgs production process in gluon fusion in the full theory using 
+the \minnlo{} method in \citere{}. Figure\,\ref{fig:topmass_Higgs_pT} shows
+the crucial importance of top-mass effect in differential Higgs production
+at NNLO+PS at the example of the Higgs transverse-momentum ($p_T$)
+spectrum by comparing the full theory result (blue solid) against
+the approximation of an infinitely heavy top quark (black, dashed).
+
+In \citere{} we have also quantified the high quality of relevant approximations 
+of the top-mass effects at NNLO, which were feasible before, in comparison to our 
+novel full-theory results. These results will be useful to provide well-motivated 
+approximations of top-mass effects beyond NNLO. Currently, we are extending 
+our \minnlo{} calculation by the complete dependence on light-quark mass 
+effects (bottom and charm) up to NNLO.
+
 %
 \subsubsection{Next-to-soft threshold in \bbH{}}
 \begin{Namen}
@@ -306,7 +363,9 @@ A. Sankar
 \begin{Namen}
 F. Garosi, S. Kumar, M. Wiesemann, G. Zanderighi
 \end{Namen}
-%
+
+
+
 \printbibliography[heading=subbibliography]
 \end{refsection}
 
