--- a/FBR_Bericht_2025.tex
+++ b/FBR_Bericht_2025.tex
@@ -296,13 +296,6 @@ Space for a nice introduction.
 %
 {\color{red} ==================\\ ====\; TO BE DONE\; ====\\ ==================}
 %
-\subsubsection{Two-loop amplitudes for Higgs plus jet}
-\begin{Namen}
-U. Haisch, M. Niggetiedt
-\end{Namen}
-%
-{\color{red} ==================\\ ====\; TO BE DONE\; ====\\ ==================}
-%
 \subsubsection{Quark-mass effects in Higgs production at NNLO}
 \begin{Namen}
 M. Niggetiedt
@@ -340,7 +333,13 @@ novel full-theory results. These results will be useful to provide well-motivate
 approximations of top-mass effects beyond NNLO. Currently, we are extending 
 our \minnlo{} calculation by the complete dependence on light-quark mass 
 effects (bottom and charm) up to NNLO.
-
+%
+\subsubsection{Cubic Higgs self interaction in Higgs plus jet at two loops}
+\begin{Namen}
+U. Haisch, M. Niggetiedt
+\end{Namen}
+%
+{\color{red} ===========================\\ ==\; REMOVE? $\rightarrow$ IN ULI's REPORT\; ==\\ ===========================}
 %
 \subsubsection{Next-to-soft threshold in \bbH{}}
 \begin{Namen}
