BSM section work

--- a/FBR_Bericht_2025.tex
+++ b/FBR_Bericht_2025.tex
@@ -465,6 +465,16 @@ Searches for physics beyond the Standard Model (BSM) physics remain a major goal
 The sensitivity of many of the conducted searches rely on the availability of precise simulations of signal and background processes, in particular those aiming to observe indirect signals of BSM in terms of (small) deviations of known SM processes or signals of missing energy. 
 The development of such tools are essential for the interpretation of collider data, but can also play a crucial role in the design of future experiments~\cite{Bechtle:2024atq}.
 %
+\subsubsection{Bringing precision to SMEFT}
+\begin{Namen}
+R. Gauld, M. Niggetiedt%, L. Schnell, U. Haisch, J. Weiss
+\end{Namen}
+The SM effective field theory (SMEFT) offers a model-independent framework to indirectly search for (non-resonant) signals of BSM.
+The potential interpretation of data in this framework is facilitated by the availability of high precision calculations in SMEFT.
+To this end, and building upon the expertise developed for predictions within the SM, several high precision studies and calculations relevant for selected Electroweak and Higgs production processes at the LHC have been performed.
+These include the development of a NNLO+PS generator for the description of the process $pp\to Vh$~\cite{Gauld:2023gtb}, the interpretation of high-energy LHC data for the $pp\to Zj$ process~\cite{Gauld:2024glt}, as well as the calculation of two-loop amplitudes for Higgs production in the presence of a modified cubic Higgs self-coupling~\cite{Haisch:2024nzv}.
+These studies have been performed in collaboration with members of the independent research group of U. Haisch, and we refer the reader to that Section for more details on these projects.
+%
 \subsubsection{Polarised NLO+PS predictions in SMEFT}
 \begin{Namen}
 J. Linder, G. Pelliccioli, G. Zanderighi
@@ -473,16 +483,6 @@ J. Linder, G. Pelliccioli, G. Zanderighi
 \subsubsection{MEM method in Powheg and \minnlo{}}
 \begin{Namen}
 U. Haisch, J. Linder, M. Wiesemann, G. Zanderighi
-\end{Namen}
-%
-\subsubsection{NNLO+PS VH}
-\begin{Namen}
-R. Gauld, L. Schnell, U. Haisch
-\end{Namen}
-%
-\subsubsection{Z+jet SMEFT}
-\begin{Namen}
-R. Gauld, U. Haisch, J. Weiss
 \end{Namen}
 %
 \subsubsection{New collider proposal for dark matter studies}
