--- a/Pheno.bib
+++ b/Pheno.bib
@@ -1,3 +1,39 @@
+@article{Gauld:2024glt,
+    author = "Gauld, R. and Haisch, U. and Weiss, J.",
+    title = "{A tale of $Z$+jet: SMEFT effects and the Lam-Tung relation}",
+    eprint = "2412.13014",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-ph",
+    reportNumber = "MPP-2024-236",
+    month = "12",
+    year = "2024"
+}
+@article{Gauld:2023gtb,
+    author = "Gauld, Rhorry and Haisch, Ulrich and Schnell, Luc",
+    title = "{SMEFT at NNLO+PS: Vh production}",
+    eprint = "2311.06107",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-ph",
+    reportNumber = "MPP-2023-261",
+    doi = "10.1007/JHEP01(2024)192",
+    journal = "JHEP",
+    volume = "01",
+    pages = "192",
+    year = "2024"
+}
+@article{Haisch:2024nzv,
+    author = "Haisch, Ulrich and Niggetiedt, Marco",
+    title = "{Exact two-loop amplitudes for Higgs plus jet production with a cubic Higgs self-coupling}",
+    eprint = "2408.13186",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-ph",
+    reportNumber = "MPP-2024-197",
+    doi = "10.1007/JHEP10(2024)236",
+    journal = "JHEP",
+    volume = "10",
+    pages = "236",
+    year = "2024"
+}
 @article{Gauld:2021zmq,
     author = "Gauld, Rhorry",
     title = "{A massive variable flavour number scheme for the Drell-Yan process}",
