added HH and started with lepton colliders

--- a/FBR_Bericht_2025.tex
+++ b/FBR_Bericht_2025.tex
@@ -47,7 +47,7 @@ Director: Prof. Dr. G. Zanderighi
 Introduction of the group.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\subsection{Novel event simulations for the hadron--hadron collisions}
+\subsection{Novel event simulations for hadron--hadron collisions}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{refsection}
 Full fledged simulations of hadron-level events build the theoretical 
@@ -289,13 +289,20 @@ G. Pelliccioli
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\subsection[Pushing the precision in Higgs studies]{Pushing the precision in Higgs studies}
+\subsection{Precision Higgs physics at the Large Hadron Collider}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{refsection}
-Space for a nice introduction.
-%
-{\color{red} ==================\\ ====\; TO BE DONE\; ====\\ ==================}
-%
+With the discovery of the Higgs boson in 2012, CERN's Large Hadron Collider has made a 
+historic contribution to particle physics. One of the major goals of the physics programme
+of the LHC since its discovery is the precise determination of the properties of the Higgs
+particles, including its mass and spin, its couplings to other particles, production and decay
+rates. To this end, higher-order computations of Higgs reactions at the LHC are indispensable
+to reach the most accurate determination of these quantities.
+
+Within our group we have been pushing the precision of Higgs-boson production and decay
+processes, at the level of both fixed-order calculations and fully exclusive event simulations,
+since many years. 
+
 \subsubsection{Quark-mass effects in Higgs production at NNLO}
 \begin{Namen}
 M. Niggetiedt
@@ -363,6 +370,15 @@ A. Behring, G. Zanderighi
 F. Garosi, S. Kumar, M. Wiesemann, G. Zanderighi
 \end{Namen}
 
+Our best opportunity to access the Higgs potential at the LHC is through the measurement
+of a pair of Higgs bosons. Di-Higgs production is directly sensitive to the trilinear Higgs coupling,
+allowing us to put bounds on its value and possibly even measuring its size with the full HL-LHC data.
+
+Since di-Higgs production is a loop-induced $2\to 2$ process the computation of higher-order 
+corrections is quite cumbersome, and so far limited to NLO in the full theory. However, by combining
+the full-theory NLO predictions with calculations in the heavy-top limit, it is possible to obtain 
+meaningful approximations of the NNLO cross section. Following this idea, we are currently 
+implementing a new NNLO+PS generator for Higgs-pair production using the \minnlo{} method.
 
 
 \printbibliography[heading=subbibliography]
@@ -404,12 +420,18 @@ C. Wang
 \end{refsection}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\subsection{Not only proton-proton collisions}
+\subsection{\mbox{Beyond hadron--hadron colliders}}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{refsection}
-The application and development of new computational methods and simulation tools has also been pursued for different collider environments, such as those from lepton-hadron or lepton-lepton collisions.
+The application and development of new computational methods and simulation tools has also 
+been pursued for different collider environments, such as those from lepton--hadron or lepton--lepton collisions.
 %
-Scattering processes with an initial-state lepton or leptons introduce different theoretical challenges as compared to that of hadron-hadron collisions, but also offer exciting opportunities to study the properties of the strong force in a relatively clean environment.
+Scattering processes with an initial-state lepton or leptons introduce different theoretical 
+challenges as compared to that of hadron--hadron collisions, but, at the same time, tools
+and methods developed during the LHC era can be adapted to leptonic initial states
+in many cases, where the state of research is often still at the level of 20 years ago or more.
+
+Moreover, lepton collisions offer exciting opportunities to study the properties of the strong force, QED interactions, and even Higgs properties in a relatively clean environment.
 %
 Such developments allow to re-visit the available data from colliders such as HERA and LEP with more precise theoretical simulations and inputs, increase the precision of simulation tools available for active experiments (e.g. IceCube and KM3NeT), and also provide a new level of theoretical precision for future experiments such as the EIC or a potential high-energy $e^+e^-$ collider. 
 %
