--- a/FBR_Bericht_2025.tex
+++ b/FBR_Bericht_2025.tex
@@ -163,6 +163,8 @@ precision.
 M. Wiesemann
 \end{Namen}
 %
+{\color{red} ==================\\ ====\; TO BE DONE\; ====\\ ==================}
+%
 \subsubsection{Associated Higgs production with bottom quarks: a flavour-scheme study at NNLO+PS}
 \begin{Namen}
 C. Biello, R. Gauld, A. Sankar, M. Wiesemann, G. Zanderighi
@@ -253,6 +255,7 @@ G. Pelliccioli, G. Zanderighi
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{refsection}
 Section for predictions at hadron-hadron colliders at fixed order.
+
 %
 {\color{red} ==================\\ ====\; TO BE DONE\; ====\\ ==================}
 %
@@ -341,22 +344,19 @@ approximations of top-mass effects beyond NNLO. Currently, we are extending
 our \minnlo{} calculation by the complete dependence on light-quark mass 
 effects (bottom and charm) up to NNLO.
 %
-\subsubsection{Cubic Higgs self interaction in Higgs plus jet at two loops}
-\begin{Namen}
-U. Haisch, M. Niggetiedt
-\end{Namen}
-%
-{\color{red} ===========================\\ ==\; REMOVE? $\rightarrow$ IN ULI's REPORT\; ==\\ ===========================}
-%
 \subsubsection{Next-to-soft threshold in \bbH{}}
 \begin{Namen}
 A. Sankar
 \end{Namen}
 %
+{\color{red} ==================\\ ====\; TO BE DONE\; ====\\ ==================}
+%
 \subsubsection{Rapidity distribution of pseudoscalar Higgs}
 \begin{Namen}
 A. Sankar
 \end{Namen}
+%
+{\color{red} ==================\\ ====\; TO BE DONE\; ====\\ ==================}
 %
 \subsubsection{VBF $H\rightarrow b\bar{b}$ production}
 \begin{Namen}
@@ -389,32 +389,46 @@ implementing a new NNLO+PS generator for Higgs-pair production using the \minnlo
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{refsection}
 Space for a nice introduction.
+
+%
+{\color{red} ==================\\ ====\; TO BE DONE\; ====\\ ==================}
 %
 \subsubsection{LASS: a subtraction scheme method at NNLO}
 \begin{Namen}
 G. Pelliccioli, A. Ratti, C. Signorile-Signorile
 \end{Namen}
 Include formulation and Strongly-ordered infrared counterterms from factorisation.
+
+%
+{\color{red} ==================\\ ====\; TO BE DONE\; ====\\ ==================}
 %
 \subsubsection{New formulation of Nested Soft-Collinear Subtraction Scheme}
 \begin{Namen}
 C. Signorile-Signorile
 \end{Namen}
 %
+{\color{red} ==================\\ ====\; TO BE DONE\; ====\\ ==================}
+%
 \subsubsection{Four-loop renormalisation of pseudoscalar operators}
 \begin{Namen}
 M. Niggetiedt
 \end{Namen}
+%
+{\color{red} ==================\\ ====\; TO BE DONE\; ====\\ ==================}
 %
 \subsubsection{Soft function at N3LO}
 \begin{Namen}
 M. Delto, C. Wang
 \end{Namen}
 %
+{\color{red} ==================\\ ====\; TO BE DONE\; ====\\ ==================}
+%
 \subsubsection{Reclassifying Feynman Integrals as Special Functions}
 \begin{Namen}
 C. Wang
 \end{Namen}
+%
+{\color{red} ==================\\ ====\; TO BE DONE\; ====\\ ==================}
 %
 \printbibliography[heading=subbibliography]
 \end{refsection}
@@ -439,6 +453,8 @@ Such developments allow to re-visit the available data from colliders such as HE
 \begin{Namen}
 F. Koenig, R. Schorer, M. Wiesemann, G. Zanderighi
 \end{Namen}
+%
+{\color{red} ==================\\ ====\; TO BE DONE\; ====\\ ==================}
 %
 \subsubsection{NLO+PS predictions for charged-lepton and neutrino induced DIS}
 \begin{Namen}
@@ -525,10 +541,15 @@ These advancements will have important implications for LHC measurements involvi
 C. Wang
 \end{Namen}
 %
+{\color{red} ==================\\ ====\; TO BE DONE\; ====\\ ==================}
+%
 \subsubsection{Neutrino content of the muon}
 \begin{Namen}
 F. Garosi
 \end{Namen}
+%
+{\color{red} ==================\\ ====\; TO BE DONE\; ====\\ ==================}
+%
 \printbibliography[heading=subbibliography]
 \end{refsection}
 
@@ -555,10 +576,14 @@ These studies have been performed in collaboration with members of the independe
 J. Linder, G. Pelliccioli, G. Zanderighi
 \end{Namen}
 %
+{\color{red} ==================\\ ====\; TO BE DONE\; ====\\ ==================}
+%
 \subsubsection{MEM method in Powheg and \minnlo{}}
 \begin{Namen}
 U. Haisch, J. Linder, M. Wiesemann, G. Zanderighi
 \end{Namen}
+%
+{\color{red} ==================\\ ====\; TO BE DONE\; ====\\ ==================}
 %
 \subsubsection{New collider proposal for dark matter studies}
 \begin{Namen}
@@ -573,6 +598,15 @@ A simulation tool (lohengrin++) has been developed jointly at the MPP (with Uni.
 \begin{Namen}
 M. Niggetiedt
 \end{Namen}
+%
+{\color{red} ==================\\ ====\; TO BE DONE\; ====\\ ==================}
+%
+\subsubsection{Cubic Higgs self interaction in Higgs plus jet at two loops}
+\begin{Namen}
+U. Haisch, M. Niggetiedt
+\end{Namen}
+%
+{\color{red} ===========================\\ ==\; REMOVE? $\rightarrow$ IN ULI's REPORT\; ==\\ ===========================}
 %
 \printbibliography[heading=subbibliography]
 \end{refsection}
