added MiNNLO ee->dijet

--- a/FBR_Bericht_2025.tex
+++ b/FBR_Bericht_2025.tex
@@ -453,9 +453,23 @@ Such developments allow to re-visit the available data from colliders such as HE
 \begin{Namen}
 F. Koenig, R. Schorer, M. Wiesemann, G. Zanderighi
 \end{Namen}
-%
-{\color{red} ==================\\ ====\; TO BE DONE\; ====\\ ==================}
-%
+
+Jet production processes are among the most central QCD reactions at lepton--lepton colliders.
+Not only do they allow us to study strong interactions in a very clean environment, they even 
+enable a competitive extraction of the strong coupling constant by considering event shapes 
+$N$-jet final states.
+
+Even though dijet production is the simplest and best studied QCD reaction in lepton collisions,
+Monte-Carlo predictions for this process do not correspond the current state-of-the-art known
+from hadron colliders. To fill this major gap we have started to develop a NNLO+PS formalism
+derived on basis of the \minnlo{} approach for $e^+e^-\to q\bar q$ production. To this end,
+we have adapted the POWHEG framework to deal with leptons in the inital state and derived
+a \minnlo{} formulation based on the known resummation formulae for event shapes.
+
+An extension of this initial project on dijet production would be to develop NNLO+PS generators
+also for QED corrections for lepton colliders based on collinear factorization, similar to how 
+QCD predictions are achieved in hadronic collisions.
+
 \subsubsection{NLO+PS predictions for charged-lepton and neutrino induced DIS}
 \begin{Namen}
 R. Gauld, G. Zanderighi
