--- a/FBR_Bericht_2025.tex
+++ b/FBR_Bericht_2025.tex
@@ -254,7 +254,7 @@ G. Pelliccioli, G. Zanderighi
 \subsection{Fixed-order predictions for the hadron--hadron collisions}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{refsection}
-Section for predictions at hadron-hadron colliders at fixed order.
+Section for predictions at hadron--hadron colliders at fixed order.
 
 %
 {\color{red} ==================\\ ====\; TO BE DONE\; ====\\ ==================}
@@ -449,7 +449,7 @@ Moreover, lepton collisions offer exciting opportunities to study the properties
 %
 Such developments allow to re-visit the available data from colliders such as HERA and LEP with more precise theoretical simulations and inputs, increase the precision of simulation tools available for active experiments (e.g. IceCube and KM3NeT), and also provide a new level of theoretical precision for future experiments such as the EIC or a potential high-energy $e^+e^-$ collider. 
 %
-\subsubsection{NNLO+PS prediction for di-jet production at lepton colliders}
+\subsubsection{NNLO+PS dijet predictions for lepton colliders}
 \begin{Namen}
 F. Koenig, R. Schorer, M. Wiesemann, G. Zanderighi
 \end{Namen}
@@ -474,9 +474,9 @@ QCD predictions are achieved in hadronic collisions.
 \begin{Namen}
 R. Gauld, G. Zanderighi
 \end{Namen}
-The POWHEG method of matching fixed-order predictions with parton showers at NLO in QCD has been successfully applied to hadron-hadron collisions for a vast range of processes. As a consequence of the genuinely different kinematics encountered in lepton-hadron collisions, substantial extensions to the POWHEX BOX framework had to be undertaken to enable this method to be applied in this new collision environment~\cite{Banfi:2023mhz}.
+The POWHEG method of matching fixed-order predictions with parton showers at NLO in QCD has been successfully applied to hadron--hadron collisions for a vast range of processes. As a consequence of the genuinely different kinematics encountered in lepton--hadron collisions, substantial extensions to the POWHEX BOX framework had to be undertaken to enable this method to be applied in this new collision environment~\cite{Banfi:2023mhz}.
 The same extensions have also enabled the method to be applied in the case of neutrino-induced collisions~\cite{FerrarioRavasio:2024kem}, which now allow for the fully exclusive simulation of (ultra) high-energy neutrino-nucleon collisions.
-These new (publicly available) tools improve the precision of fully exclusive simulations of lepton-hadron collisions. This has direct implications for past experiments such as HERA, ongoing measurements at forward detectors at the LHC (e.g. Faser$\nu$, FPF) and large volume neutrino experiments (IceCube, KM3NeT, Baikal), as well as forthcoming colliders such as the EIC and proposed next-generation neutrino detectors.
+These new (publicly available) tools improve the precision of fully exclusive simulations of lepton--hadron collisions. This has direct implications for past experiments such as HERA, ongoing measurements at forward detectors at the LHC (e.g. Faser$\nu$, FPF) and large volume neutrino experiments (IceCube, KM3NeT, Baikal), as well as forthcoming colliders such as the EIC and proposed next-generation neutrino detectors.
 %
 \subsubsection{Strong-coupling constant determination}
 \begin{Namen}
