--- a/FBR_Bericht_2025.tex
+++ b/FBR_Bericht_2025.tex
@@ -597,7 +597,17 @@ J. Linder, G. Pelliccioli, G. Zanderighi
 U. Haisch, J. Linder, M. Wiesemann, G. Zanderighi
 \end{Namen}
 %
-{\color{red} ==================\\ ====\; TO BE DONE\; ====\\ ==================}
+The matrix-element method (MEM) is an approach that defines, in principle, optimal observables
+for experimental analyses to separate the signal from background events. In contrast to usual 
+observables that are directly computed from the event kinematics, MEM, as the name suggests, 
+relies on the matrix elements for the given event kinematics to define the observable. This employed
+to maximize the signal/background ratio in a cut-based analysis. An important application of this
+approach is the determination of the width of the Higgs boson at the LHC.
+
+In its original formulation MEM is defined solely at the level of LO matrix elements. We are currently
+developing an extension of the MEM approach to use NLO+PS predictions within Powheg and,
+as a final goal, NNLO+PS predictions based on \minnlo{}. The goal is to achieve a more reliable
+determination of the optimal MEM observable.
 %
 \subsubsection{New collider proposal for dark matter studies}
 \begin{Namen}
